--- a/.classpath
+++ b/.classpath
@@ -2,7 +2,7 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/J2SE-1.5"/>
-	<classpathentry kind="lib" path="C:/Users/wangqiang/Desktop/data mining/IKAnalyzer2012_u6/IKAnalyzer2012_u6.jar"/>
-	<classpathentry kind="lib" path="C:/Users/wangqiang/Desktop/data mining/lucene-core-3.6.1.jar"/>
+	<classpathentry kind="lib" path="lib/IKAnalyzer-2012.jar"/>
+	<classpathentry kind="lib" path="lib/lucene-core-3.4.0.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
